# OOP_powerpoint

./: Application.cpp  Application.hpp  CMakeLists.txt  Makefile  Parser.cpp  Parser.hpp  README.md  configuration.cpp  configuration.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mywidget.cpp  mywidget.hpp
Commands/: AddCommand.cpp  AddCommand.hpp  AddItemCommand.cpp  AddItemCommand.hpp  AddSlideCommand.cpp  AddSlideCommand.hpp  Command.hpp  DisplayCommand.cpp  DisplayCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  QuitCommand.cpp  QuitCommand.hpp
Document/: Document.cpp  Document.hpp  Slide.cpp  Slide.hpp
Document/Items/: BoundingBox.cpp  BoundingBox.hpp  Item.cpp  Item.hpp  ItemFactory.cpp  ItemFactory.hpp
Parser/: CommandCreator.cpp  CommandCreator.hpp  CommandRegistry.cpp  CommandRegistry.hpp
Qt/: Application.cpp  Application.hpp  Configuration.cpp  Configuration.hpp  MainWindow.cpp  MainWindow.hpp  QtController.cpp  QtController.hpp
Qt/Renderer/: ItemRenderer.cpp  ItemRenderer.hpp  SlideRenderer.cpp  SlideRenderer.hpp
Qt/View/: CommandLog.hpp  CommandWidget.cpp  CommandWidget.hpp  ItemsToolBar.cpp  ItemsToolBar.hpp  SlideView.cpp  SlideView.hpp  WorkingArea.cpp  WorkingArea.hpp
Registries/: ShapeRegistry.cpp  ShapeRegistry.hpp
Shapes/: Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  ShapeBase.cpp  ShapeBase.hpp  Triangle.cpp  Triangle.hpp
